# 97110296

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lastGame.txt  map.txt  mapmap.txt  project  project.cbp  texet.txt
src/: AI.c  AI.h  UI.c  UI.h  colors.h  effects.c  effects.h  init.c  init.h  logic.c  logic.h  main.c  map.txt  physics.c  physics.h  power-ups.c  power-ups.h  simple_snake.c  stack.c  stack.h  structs.h  view.c  view.h
